qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
              name: webui
              protocol: TCP
            - containerPort: 6881
              name: torrenting
              protocol: TCP
            - containerPort: 6881
              name: torrenting-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: downloads
          hostPath:
            path: /home/nasus/Videos
            type: Directory
